Add pascal to literature review

--- a/dissertation/dissertation.bib
+++ b/dissertation/dissertation.bib
@@ -7,6 +7,16 @@ title = {The Structure and Performance of Efficient Interpreters.},
 volume = {5},
 journal = {J. Instruction-Level Parallelism}
 }
+@article{pascal,
+author = {Bowles, Kenneth and Hollan, James},
+year = {1978},
+month = {07},
+pages = {531-534},
+title = {An introduction to the UCSD PASCAL system},
+volume = {10},
+journal = {Behavior Research Methods},
+doi = {10.3758/BF03205341}
+}
 @article{superoperators,
 author = {Proebsting, Todd A.},
 title = {Optimizing an ANSI C Interpreter with Superoperators},
