--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -16,7 +16,7 @@
 \begin{document}
 \maketitle
 \clearpage
-\tableofcontents
+% TODO \tableofcontents
 \section{Introduction}
 
 %1. Introduction: objectives, intro to contents (overview)
@@ -74,22 +74,17 @@ The first technique describes the process of code being compiled (translated)
 into machine code. The end product is a stand alone program that can be
 executed at any time on the architecture it was compiled for.
 
-The second approach is called 'interpreting'. There are two primary methods
-to how an interpreter works. One approach is called a tree-walk interpreter.
-
-In this case the interpreter just walks the generated abstract syntax tree
-and executes it.
-
-The second approach is a virtual machine interpreter which involves an extra
-step between the generation of the syntax tree and the execution. A compiler
-walks the tree and generates byte code. This bytecode will then be fed into
-the virtual machine which executes it.
-
-We will use a virtual machine interpreter in this paper.
-
-Interpreters are generally easier to implement and have some other advantages
-that makes them more approachable than compilers like portability or a fast
-edit-compile-run cycle as stated by the authors of vmgen ~\cite{vmgen}. 
+The second approach is called 'interpreting'. There are two primary methods to
+how an interpreter works. One approach is called a tree-walk interpreter. In
+this case the interpreter just walks the generated abstract syntax tree and
+executes it. The second approach is a virtual machine interpreter which
+involves an extra step between the generation of the syntax tree and the
+execution. A compiler walks the tree and generates byte code. This bytecode
+will then be fed into the virtual machine which executes it. We will use a
+virtual machine interpreter in this paper. Interpreters are generally easier to
+implement and have some other advantages that makes them more approachable than
+compilers like portability or a fast edit-compile-run cycle as stated by the
+authors of vmgen ~\cite{vmgen}. 
 
 %/*
 %what is a vm interpreter?
@@ -102,14 +97,14 @@ edit-compile-run cycle as stated by the authors of vmgen ~\cite{vmgen}.
 
 \subsection{What is a virtual machine interpreter?}
 A famous technique to implement interpreters is to build a virtual machine
-interpreter. A vm interpreter is generally divided into two systems. A frontend
+interpreter. A VM interpreter is generally divided into two systems. A frontend
 and a backend. ~\cite{vmgen}
 
 The frontend consists of a compiler that takes the written code and produces a
 sequence of bytecode instructions. The backend is a virtual machine that gets
 the stream of bytecode instructions as input and executes them. ~\cite{vmgen}
 
-The bytecode or intermediate representation used in a vm interpreter is usually
+The bytecode or intermediate representation used in a VM interpreter is usually
 designed to be very similar to a real machine. ~\cite{vmgen}
 
 Some real world examples of virtual machine interpreters are for example the
@@ -117,8 +112,8 @@ JVM (Java Virtual Machine) or the PVM (Python Virtual Machine).
 
 
 \subsection{Virtual machine}
-When we are talking about virtual machines we distinguish between stack based vm's and 
-register based vm's.
+When we are talking about virtual machines we distinguish between stack based VMs and 
+register based VMs.
 
 Each of the version has it's advantages and disadvantages.
 
@@ -141,6 +136,7 @@ This simplicity is the reason we have to decided to rely on a stack based virtua
 this paper.
 
 \subsection{Optimizations}
+%TODO rewrite this, not saying compilers try to optimize
 When executing code written in an language that uses a virtual machine
 interpreter, in general, the compiler does not just generate bytecode for the
 VM but also tries to optimize as much as possible to ensure that the execution
@@ -150,9 +146,10 @@ of a compiler.
 
 During the development of this project we have looked at a number of different
 optimizations. Some of the optimizations that we have implemented for the
-project are threaded code and peephole optimizations (superinstructions).
+project are threaded code and superinstructions.
 
 \subsection{Automation}
+%TODO remove this?
 Writing an interpreter for a programming language can be a tedious and
 challenging task on it's own. Thinking about how to keep the code efficient and
 additionally implement optimizations makes it even harder.
@@ -169,16 +166,16 @@ needing to change the code and be more efficient.
 
 \subsection{Objectives}
 This paper will use the Rust programming language to build each part of a virtual machine 
-interpreter with the optimal goal of automating the generation of it self depending on
+interpreter with the eventual goal of automating the generation of it self depending on
 a given configuration.
 
-We will explore techniques and approaches on how to build a vm interpreter in
+We will explore techniques and approaches on how to build a VM interpreter in
 Rust and use benchmarking to visualize results highlighting effects of
 optimizations.
 
 \section{Description of the problem}
 When it comes to the problem that we are trying to solve there are two main
-points. Efficiency and Automation.
+points: efficiency and automation.
 
 \subsection{Efficiency}
 In terms of efficiency at run time, nativ compiled machine code will always
@@ -203,19 +200,19 @@ disadvantages to compilers.
 Many programmers will have the idea of implementing their own programming
 language at some point in their career. Most of them will have noticed that
 buidling an interpreter is a challenging task and requires a lot of work and
-a clear structure. In addition to that it shows that many parts of an vm
+a clear structure. In addition to that it shows that many parts of an VM
 interpreter are similar and repetitive. For example the code for executing 
 VM instructions will be similar for most of the instructions. ~\cite{vmgen}
 
 But what happens when the interpreter does not give the expected outcome in
 terms of efficiency. It results in manual rewriting of a codebase just to
-change the implementation of some part of the vm interpreter to see if the
+change the implementation of some part of the VM interpreter to see if the
 performance increases. Rewriting the whole interpreter to test if the
 performance is better using a different development approach is not only time
 consuming but also error prone.
 
 One solution to this problem is automation. The developer should be able to
-provide a configuration file and based on that we will generate an efficient vm
+provide a configuration file and based on that we will generate an efficient VM
 interpreter. It will already use efficient implementation techniques and come
 with built in optimizations. It also provides easy extensibility for the user
 without needing to change any source code.
@@ -228,8 +225,9 @@ By analyzing these papers, we aim to highlight different appraoches and
 concepts used to develop efficient interpreters and analyze them regarding
 complexity.
 
-We'll cover the choice of programming language, different ways of generated
-output, multiple ways the interpreter can be implemented and virtual machines.
+We'll cover the choice of programming language, multiple ways the interpreter
+can be implemented, types of virtual machines and the output format of the
+compiler.
 
 \subsection{Programming Language}
 Most of the code written, targeting the problem of efficent interpreters or
@@ -271,29 +269,6 @@ Machine Interpreters' state:
 GNU C using the labels-as-values extension." ~\cite{vmgen} 
 \end{quotation}
 
-\subsection{Output Language}
-The frontend of the interpreter, the compiler, generates output. What kind
-of output it is depends on the use case.
-
-For example, for virtual machine interpeters the compiler outputs byte code that
-can be run by the virutal machine. This is platform independent but comes with
-the cost of reduced performance.
-
-A native-code compiler outputs machine code for a specific architecture. This is faster
-than interpreting but is limited when it comes to portability.
-
-Another approach is to compile to C. With that we have portability and gain all the 
-optimization that were added to C compiler in the last 30 years. Some disadvantages
-are stated by the authors of 'The Structure and Performance of Efficient Interpreters':
-
-\begin{quotation} 
-"Why not write a compiler to C? While this method addresses the
-ease-of-implementation and retargeting issues, it is not acceptable when
-interactivity, quick turnarounds, or non-C features (e.g., run-time
-code-generation or guaranteed tail-call optimization) are required."
-~\cite{structure_and_performance}
-\end{quotation} 
-
 \subsection{Interpreter approaches}
 There are several ways to implement an interpreter. We are looking
 at the 2 most widely used practices. 
@@ -328,7 +303,19 @@ and execute the bytecode instructions. Debugging is also more complex since
 the generated instructions do not mirror the code structure anymore.
 
 \subsection{Virtual Machines}
-When talking about virual machines we consider only the 2 main paradigms in
+Virtual machines create an abstraction layer between the host machine and 
+the code that is executed. This enables machine independence for code
+written in programming languages that do not run on a certain architecture.
+
+The paper 'An introduction to the UCSD PASCAL system' describes the development
+of an early virtual machine, pseudomachine, to enable the use of high level
+programming languages such as FORTRAN on unsupported systems. During that time
+it was common for new architectures to support popular languages like FORTRAN
+but even then, there were many problems when transporting programs from one
+system to another and smaller machines had no support of high level languages.
+~\cite{pascal}
+
+When talking about virual machines we only consider the 2 main paradigms in
 this paper, namely stack based and register based virtual machines.
 
 While virtual machines are great to use in combination with interpreters
@@ -379,7 +366,7 @@ virtual machine.
 
 When Lua was first created in 1993 it used a stack based virtual machine. 10
 years later in 2003 with the release of Lua 5.0 they have changed their
-approach and now use a register based vm. ~\cite{lua_implementation}
+approach and now use a register based VM. ~\cite{lua_implementation}
 
 To understand how Lua profited from the register based virtual machine we first
 need to understand how Lua works.
@@ -396,7 +383,7 @@ In addition to that register based instructions do not need any PUSH or POP
 instruction which are expensive in Lua because of the way Lua represents
 values.
 
-Looking at the disadvantages of register based vm's in terms of generated code
+Looking at the disadvantages of register based VMs tn terms of generated code
 size and single instruction size in Lua we can see that they are not too bad.
 
 Lua's stack based virtual machine had an instruction set of 49 instructions
@@ -434,7 +421,7 @@ The generated instructions vary a lot from Lua 4.0 to Lua 5.0.
         GETINDEXED  2
         SETLOCAL    0
     \end{verbatim}
-    \caption{\textit{Generated instructions for Lua 4.0 (stack based vm) from ~\cite{lua_implementation}}}
+    \caption{\textit{Generated instructions for Lua 4.0 (stack based VM) from ~\cite{lua_implementation}}}
     \label{fig:lua_generated4}
 \end{figure}
 
@@ -446,7 +433,7 @@ The generated instructions vary a lot from Lua 4.0 to Lua 5.0.
         ADD         0 0 250 ;1
         GETTABLE    0 1 2
     \end{verbatim}
-    \caption{\textit{Generated instructions for Lua 5.0 (register based vm) from ~\cite{lua_implementation}}}
+    \caption{\textit{Generated instructions for Lua 5.0 (register based VM) from ~\cite{lua_implementation}}}
     \label{fig:lua_generated5}
 \end{figure}
 
@@ -454,6 +441,117 @@ Comparing Figure \ref{fig:lua_generated4} and Figure \ref{fig:lua_generated5}
 we can see even though each instruction in Figure \ref{fig:lua_generated5} has 3 operands,
 resulting in larger size, it just generated a total of 4 instructions compared
 to 11 in Figure \ref{fig:lua_generated4}.
+
+\subsection{Output Format}
+The frontend of the interpreter, the compiler, generates output. What kind
+of output it is depends on the use case.
+
+For example, for virtual machine interpeters the compiler outputs byte code that
+can be run by the virutal machine. This is platform independent but comes with
+the cost of reduced performance.
+
+A native-code compiler outputs machine code for a specific architecture. This is faster
+than interpreting but is limited when it comes to portability.
+
+Another approach is to compile to C. With that we have portability and gain all the 
+optimization that were added to C compiler in the last 30 years. Some disadvantages
+are stated by the authors of 'The Structure and Performance of Efficient Interpreters':
+
+\begin{quotation} 
+"Why not write a compiler to C? While this method addresses the
+ease-of-implementation and retargeting issues, it is not acceptable when
+interactivity, quick turnarounds, or non-C features (e.g., run-time
+code-generation or guaranteed tail-call optimization) are required."
+~\cite{structure_and_performance}
+\end{quotation} 
+
+The paper 'Optimizing an ANSI C Interpreter with Superoperators' shows a hybrid
+approach which generates "efficient code that includes a small amout of native
+code with interpreted code". ~\cite{superoperator}
+
+\begin{quotation}
+"This hybrid approach allows the object files to maintain all C calling con-
+ventions so that they may be freely mixed with natively compiled object
+files. The interpreted object code is approximately the same size as
+equivalent native code, and runs only 3-16 times slower." ~\cite{superoperator}
+\end{quotation}
+
+\section{Approaches}
+In the following section we will go into detail about why we have used the 
+techniques and tools as we did, re-evaluate on the decisions and present 
+learnings.
+
+The choice of the implementation langauge had the most influence on the
+efficiency of the VM interpreter.
+
+The industry standard for implementing such systems is either C or assembly.
+We made the decision to use Rust early on to explore how we can use it's
+higher-level language features, such as it's enums, to do low level programming
+and see if we can get close to the efficency of C implementations with the
+convenience that Rust gives us during development.
+
+Rust prevents many errors from happening during development by for example
+enforcing strict rules on ownership of data and provides high level language
+features such as iterators, match statements and a rich standard library of 
+containers such as HashMaps.
+
+To represent byte code in Rust we used it's powerful enums. This is very
+convenient since enums can have fields attached and are an actual type not like
+in C where enums are just numbers.
+
+While this approach is very convenient it is not very efficient. One byte code
+instruction as we designed the enum takes up 32 bits of memory.
+
+The largest enum variant is the jump instruction as it holds a string `label`
+and an i32 `offset`. Since Rust's enums behave like a tagged union every
+instruction has the size of the largest instruction.
+
+\begin{verbatim}
+A string in Rust contains:
+    8 bits -> pointer to the chars
+    8 bits -> len of the string
+    4 bits -> the i32 value
+    8 bits -> enum tag
+    + padding
+
+    adds up to 32 bits.
+\end{verbatim}
+
+A more efficient approach to represent byte code in Rust would be to just
+define each instruction by a unique integer. By doing this, we would basically
+use the same technique as using enums in C.
+ 
+A big downside that followed the decision to use Rust was the way we have
+implemented the computed goto optimization. The detailed implementation is
+discussed in section \ref{it:goto}.
+
+Since rust does not allow the usage of labels like C does, we had to use an
+alternative technique where we stored the function pointers to the routines
+that execute a byte code instruction, in a hash map and had to use the
+discriminants as an index. This additional indirection at the end of every 
+executed instruction caused an extreme performance slowdown.
+
+The typical approach in C would be to store the adderesses of the labels to the
+routines in an array and index it by using the C enum reprentation of an
+instruction.
+
+Earlier we evaluated that register-based virtual machines, when set-up
+correctly, can be faster and more efficient than stack based VMs.
+
+In our implementation we still decided to use a stack based virtual machine.
+The reason for that lays in its simplicity. This project aimes to explore
+how to build a virtual machine interpreter in Rust. Therefore we tried to
+keep the implementation as simple as possible. The possible impelementation of
+a register based virutal machine in the future is more described in the Section
+\ref{sec:future}.
+
+%You have a big downside to discuss in your approach, in that you saw a big
+%slowdown when you tried to add threaded code. You can write about how the
+%choice to use Rust, and the particular Rust types/features you used, brought
+%that about. Like, that you used enums and discriminants a hash table, whereas a
+%lower level VM implementation would represent the bytecode as a byte array and
+%the computed GOTO table as a plain array of pointers.
+      
 
 \section{Description of work}
 The goal of this project is to build a virtual machine interpreter and 
@@ -467,19 +565,19 @@ interpreter is the Imp programming language (see section
 \ref{sec:input_language}). ~\cite{Pierce:SF1}
 
 %TODO maybe this in approaches ??
-But why did we use Rust and not the C programming language or assembly like
-most other systems do?
-One reason for that is that as stated before most of the already existing
-solutions are written in C and assembly and we wanted to explore something new.
-Another reason why we decided to use Rust is that we were looking for a low level
-systems programming language that allows us to work as efficient as possible
-while still offering high level features like match statements and iterators.
-An extension to that is Rust's expressive type system and strict memory
-management rules which helps avoiding many kinds of errors that appear in 
-standard C programming.
+%But why did we use Rust and not the C programming language or assembly like
+%most other systems do?
+%One reason for that is that as stated before most of the already existing
+%solutions are written in C and assembly and we wanted to explore something new.
+%Another reason why we decided to use Rust is that we were looking for a low level
+%systems programming language that allows us to work as efficient as possible
+%while still offering high level features like match statements and iterators.
+%An extension to that is Rust's expressive type system and strict memory
+%management rules which helps avoiding many kinds of errors that appear in 
+%standard C programming.
 
 \subsection{Virtual Machine}
-The virtual machine, the backend of the vm interpreter, is the part that
+The virtual machine, the backend of the VM interpreter, is the part that
 exectues the byte code that was generated by the compiler.
 
 \subsubsection{Implementation}
@@ -561,29 +659,30 @@ pub enum ByteCode {
 \end{verbatim}
 \textit{Rust representation of the Byte Code} \\
 
-One downside of using the convenient Rust way of using enums to represent byte
-code is that they are relatively large in memory.
+%TODO this is now in approaches
+%One downside of using the convenient Rust way of using enums to represent byte
+%code is that they are relatively large in memory.
 
-One byte code instruction adds up to 32 bits in memory. 
-Enums in rust behave like a tagged union. That means the size of each variant
-is equal to the size of the biggest field + an enum tag.
+%One byte code instruction adds up to 32 bits in memory. 
+%Enums in rust behave like a tagged union. That means the size of each variant
+%is equal to the size of the biggest field + an enum tag.
 
-The largest field in our byte code representation is the Jz label. It contains
-a String and an i32.
+%The largest field in our byte code representation is the Jz label. It contains
+%a String and an i32.
 
-\begin{verbatim}
-A string in Rust contains:
-    8 bits -> pointer to the chars
-    8 bits -> len of the string
-    4 bits -> the i32 value
-    8 bits -> enum tag
-    + padding
+%\begin{verbatim}
+%A string in Rust contains:
+    %8 bits -> pointer to the chars
+    %8 bits -> len of the string
+    %4 bits -> the i32 value
+    %8 bits -> enum tag
+    %+ padding
 
-    adds up to 32 bits.
-\end{verbatim}
-This decision might be good for developing since the Rust compiler will prevent
-you from making mistakes such as forgetting to check for a variant in a match
-statement but is not really efficient.
+    %adds up to 32 bits.
+%\end{verbatim}
+%This decision might be good for developing since the Rust compiler will prevent
+%you from making mistakes such as forgetting to check for a variant in a match
+%statement but is not really efficient.
 
 \subsection{Interpreter}
 The interpreter consists of a scanner and a parser. We have decided to
@@ -685,7 +784,7 @@ pub struct IfStmt {
 \subsection{Optimizations}
 Optimizaions play a critical role in the field of compiler design. From the
 endless list of optimizations we chose a couple ones to dive into detail
-about and use in the vm interpreter.
+about and use in the VM interpreter.
 
 Some common techniques are:
 \begin{enumerate}
@@ -1282,7 +1381,7 @@ superinstructions grows linear to the byte code (see Section
 
 \section{Summary}
 what have we archived?
-- exploring how to write an vm interpreter in Rust
+- exploring how to write an VM interpreter in Rust
     -> learnings
         - using enum as bytecode
         - find a better way to implement threaded code
@@ -1292,7 +1391,7 @@ what have we archived?
 %TODO
 
 \section{Future Work}
-% TODO the heuristic thing
+\label{sec:future}
 The last section of this paper will focus on ways to improve this project
 in the future.
 
@@ -1309,9 +1408,8 @@ is to let the user define their own superinstructions and write them down in a
 syntax we can understand to automatically implement them during generation.
 
 Other ways to improve this project in the future is to think about a different
-way to model the byte code inside of the Rust code. We have already described
-why the approach we chose is not the most optimal way in Section
-\ref{sec:byte_code}.
+way to model the byte code inside of the Rust code as our chosen approach was
+not the most efficient. 
 
 To further improve the efficiency we can implement more optimization techniques
 in the future. To name a few optimizations that should be pretty easy to
@@ -1328,11 +1426,24 @@ in the paper 'Optimizing an ANSI C Interpreter with Superoperators'
 sets of superinstructions. This approach automates the process of finding good
 superinstructions to use.
 
+Another way to further develop this project is to change the architecture of the
+virutal machine and use a register based machine. Doing this would also result
+in a change of the bytecode reprentation and optimally make the VM interpreter
+more efficient.
+
 \clearpage
 \bibliographystyle{plain}
 \bibliography{dissertation}
 \end{document}
 
+
+%questions
+%what to do in the video ?
+%screenrecording -> run it
+%what about the logbook
+%images not in right position
+%font correct format
+%byte code or bytecode
 
 
 
